# Churn-guard-with-recomendations-

./: .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: tests.yml
artifacts/: best_model.pkl  training_summary.json
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
notebook/: eda.ipynb
src/: data_ingest.py  data_transform.py  exception.py  logging.py  model_train.py  pipeline.py  predict.py  recommend.py  simulate.py  utils.py
tests/: test_data_transform.py  test_pipeline.py
