[project]
name = "churn-guard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "catboost>=1.2.10",
    "docker>=7.1.0",
    "dvc>=3.67.1",
    "fastapi>=0.138.0",
    "google-genai>=2.9.0",
    "imbalanced-learn>=0.14.2",
    "lightgbm>=4.6.0",
    "matplotlib>=3.11.0",
    "mlflow>=3.14.0",
    "numpy>=2.5.0",
    "optuna>=4.9.0",
    "pandas>=2.3.3",
    "plotly>=6.8.0",
    "pytest>=9.1.1",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.51",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
    "xgboost>=3.3.0",
]
